[gd_scene load_steps=17 format=2]

[ext_resource path="res://Game/Levels/PracticeTemplate.gd" type="Script" id=1]
[ext_resource path="res://Game/Backgrounds/RandomBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Buttons/CloudButton/CloudButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Buttons/LargeButton/LargeButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Fonts/Nokia/nokia.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Game/Buttons/Commons/Back.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/Panels/ContinuePanel/ContinuePanel.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 80
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=3]

resource_name = "continue_show"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ContinuePanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 1312, -32 ), Vector2( 608, 384 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ContinuePanel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 4, 1 ),
"update": 0,
"values": [ Vector2( -144, 576 ), Vector2( -144, 576 ), Vector2( 16, 576 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Questions/Result:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.6, 1.2 ),
"transitions": PoolRealArray( -4, 1, 1 ),
"update": 0,
"values": [ Vector2( -1216, 240 ), Vector2( 32, 240 ), Vector2( 32, 240 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Questions/Result:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.6, 1.2, 1.5 ),
"transitions": PoolRealArray( -4, 1, -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Questions/Result:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Práctica", "Práctica" ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Questions/Question:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 32 ), Vector2( 32, -224 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Questions/ThreeAlt/TAOpt1:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 400 ), Vector2( 160, 400 ), Vector2( 1296, 400 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Questions/ThreeAlt/TAOpt2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 500 ), Vector2( 160, 500 ), Vector2( 1296, 500 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Questions/ThreeAlt/TAOpt3:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 600 ), Vector2( 160, 600 ), Vector2( 1296, 600 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Questions/Result:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Questions/Result:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( -4, 1, -4, 1 ),
"update": 0,
"values": [ Vector2( -1216, 240 ), Vector2( 32, 240 ), Vector2( 32, 240 ), Vector2( -1232, 240 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Questions/Result:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, -4, -4, -4 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Questions/ThreeAlt/TAOpt1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 1280, 400 ), Vector2( 160, 400 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Questions/ThreeAlt/TAOpt2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 1280, 500 ), Vector2( 160, 500 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Questions/ThreeAlt/TAOpt3:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 1280, 600 ), Vector2( 160, 600 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Questions/Question:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, -4, 1 ),
"update": 0,
"values": [ Vector2( 32, -240 ), Vector2( 32, -240 ), Vector2( 32, 32 ) ]
}

[sub_resource type="Animation" id=8]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Questions/Result:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Questions/Result:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( -4, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Questions/Result:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 240 ), Vector2( 32, 240 ), Vector2( -1216, 240 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Questions/TF/TFOpt1:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, -4, 1 ),
"update": 0,
"values": [ Vector2( 304, 448 ), Vector2( 304, 448 ), Vector2( 304, 720 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Questions/TF/TFOpt2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 736, 448 ), Vector2( 736, 448 ), Vector2( 736, 720 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Questions/Question:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 4, 1 ),
"update": 0,
"values": [ Vector2( 32, 64 ), Vector2( 32, 64 ), Vector2( 32, -240 ) ]
}

[sub_resource type="Animation" id=9]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Questions/Question:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, -4, 1 ),
"update": 0,
"values": [ Vector2( 32, -240 ), Vector2( 32, -240 ), Vector2( 32, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Questions/TF/TFOpt2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, -4, 1 ),
"update": 0,
"values": [ Vector2( 736, 720 ), Vector2( 736, 720 ), Vector2( 736, 448 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Questions/TF/TFOpt1:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -4, 1 ),
"update": 0,
"values": [ Vector2( 304, 720 ), Vector2( 304, 720 ), Vector2( 304, 448 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Questions/Result:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[node name="PracticeTemplate" type="Node" index="0"]
script = ExtResource( 1 )

[node name="RandomBackground" parent="." index="0" instance=ExtResource( 2 )]

[node name="Questions" type="Node" parent="." index="1"]
editor/display_folded = true

[node name="TF" type="Node" parent="Questions" index="0"]

[node name="TFOpt1" parent="Questions/TF" index="0" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -336.0
margin_right = -86.0

[node name="TFOpt2" parent="Questions/TF" index="1" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 96.0
margin_top = 360.0
margin_right = 346.0
margin_bottom = 610.0

[node name="ThreeAlt" type="Node" parent="Questions" index="1"]

[node name="TAOpt1" parent="Questions/ThreeAlt" index="0" instance=ExtResource( 4 )]
margin_left = 1296.0
margin_top = 400.0
margin_right = 2400.0
margin_bottom = 500.0

[node name="TAOpt2" parent="Questions/ThreeAlt" index="1" instance=ExtResource( 4 )]
margin_left = 1296.0
margin_top = 500.0
margin_right = 2400.0
margin_bottom = 600.0

[node name="TAOpt3" parent="Questions/ThreeAlt" index="2" instance=ExtResource( 4 )]
margin_left = 1296.0
margin_top = 600.0
margin_right = 2400.0
margin_bottom = 700.0

[node name="Question" type="Label" parent="Questions" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = -224.0
margin_right = 1248.0
margin_bottom = -15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.364706, 0.92549, 0.203922, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem "
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Result" type="Label" parent="Questions" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 240.0
margin_right = 1248.0
margin_bottom = 449.0
rect_scale = Vector2( 0, 0 )
rect_pivot_offset = Vector2( 608, 104 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.984314, 0.301961, 0.266667, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Práctica"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "Visibility", "custom_colors", "custom_fonts" ]

[node name="Back" parent="." index="2" instance=ExtResource( 6 )]

[node name="ContinuePanel" parent="." index="3" instance=ExtResource( 7 )]
position = Vector2( 1312, -32 )
scale = Vector2( 1e-05, 1e-05 )
_sections_unfolded = [ "Transform" ]

[node name="Anim" type="AnimationPlayer" parent="." index="4"]
root_node = NodePath("..")
autoplay = "start"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/continue_show = SubResource( 3 )
anims/finish = SubResource( 4 )
anims/start = SubResource( 5 )
anims/ta_hide = SubResource( 6 )
anims/ta_show = SubResource( 7 )
anims/tf_hide = SubResource( 8 )
anims/tf_show = SubResource( 9 )
blend_times = [  ]

[node name="Curtain" type="ColorRect" parent="." index="5"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0 )
_sections_unfolded = [ "Mouse" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Questions/TF/TFOpt1" to="." method="_on_TFOpt1_pressed"]
[connection signal="pressed" from="Questions/TF/TFOpt2" to="." method="_on_TFOpt2_pressed"]
[connection signal="pressed" from="Questions/ThreeAlt/TAOpt1" to="." method="_on_TAOpt1_pressed"]
[connection signal="pressed" from="Questions/ThreeAlt/TAOpt2" to="." method="_on_TAOpt2_pressed"]
[connection signal="pressed" from="Questions/ThreeAlt/TAOpt3" to="." method="_on_TAOpt3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
